@@ -98,8 +98,8 @@ if (MFEM_USE_MPI)
   if (MFEM_USE_PETSC)
     find_package(PETSc REQUIRED)
     message(STATUS "Found PETSc version ${PETSC_VERSION}")
-    if (PETSC_VERSION AND (PETSC_VERSION VERSION_LESS 3.7.5.99))
-      message(FATAL_ERROR "PETSc version >= 3.7.5.99 is required")
+    if (PETSC_VERSION AND (PETSC_VERSION VERSION_LESS 3.8.0))
+      message(FATAL_ERROR "PETSc version >= 3.8.0 is required")
     endif()
     set(PETSC_INCLUDE_DIRS ${PETSC_INCLUDES})
   endif()
