@@ -70,38 +70,37 @@ set(EX3P_ARGS -m ../../data/klein-bottle.mesh
     -o 2 -f 0.1 --usepetsc --petscopts rc_ex3p_bddc --nonoverlapping)
 set(EX4P_ARGS -m ../../data/klein-bottle.mesh
     -o 2 --usepetsc --petscopts rc_ex4p_bddc --nonoverlapping)
-set(EX5_BDDC_ARGS -m ../../data/star.mesh
+set(EX5P_BDDC_ARGS -m ../../data/star.mesh
     --usepetsc --petscopts rc_ex5p_bddc --nonoverlapping)
-set(EX5_FSPL_ARGS -m ../../data/beam-tet.mesh
+set(EX5P_FSPL_ARGS -m ../../data/beam-tet.mesh
     --usepetsc --petscopts rc_ex5p_fieldsplit)
-set(EX5P_ARGS ${EX5_FSPL_ARGS})
 set(EX6P_ARGS -m ../../data/amr-quad.mesh --usepetsc)
-set(EX9P_ARGS -m ../../data/periodic-hexagon.mesh
-    --usepetsc --petscopts rc_ex9p_expl)
+set(EX9P_E_ARGS -m ../../data/periodic-hexagon.mesh
+    --usepetsc --petscopts rc_ex9p_expl -dt 0.1)
+set(EX9P_ES_ARGS -m ../../data/periodic-hexagon.mesh
+    --usepetsc --petscopts rc_ex9p_expl --no-step)
+set(EX9P_IS_ARGS -m ../../data/periodic-hexagon.mesh
+    --usepetsc --petscopts rc_ex9p_impl --implicit -tf 0.5)
 set(EX10P_ARGS -m ../../data/beam-quad.mesh
     -tf 30 -s 3 -rs 2 -dt 3 --usepetsc --petscopts rc_ex10p)
 
-# Add the tests: one test per source file.
-foreach(SRC_FILE ${PETSC_EXAMPLES_SRCS})
-  get_filename_component(SRC_FILENAME ${SRC_FILE} NAME)
-  string(REPLACE ".cpp" "" TEST_NAME ${SRC_FILENAME})
-  string(TOUPPER ${TEST_NAME} UP_TEST_NAME)
+# Add the tests: one test per command-line-variable.
+foreach(TEST_OPTIONS_VAR
+        EX1P_ARGS EX2P_ARGS EX3P_ARGS EX4P_ARGS EX5P_BDDC_ARGS EX5P_FSPL_ARGS
+        EX6P_ARGS EX9P_E_ARGS EX9P_ES_ARGS EX9P_IS_ARGS EX10P_ARGS)
+  string(REGEX REPLACE "^(.+)_ARGS" "\\1" TEST_NAME_UC ${TEST_OPTIONS_VAR})
+  string(TOLOWER ${TEST_NAME_UC} TEST_NAME_FULL)
+  string(REGEX REPLACE "^([^_]+).*" "\\1" TEST_NAME ${TEST_NAME_FULL})
+  set(TEST_NAME_FULL ${PFX}${TEST_NAME_FULL})
   set(TEST_NAME ${PFX}${TEST_NAME})
+  set(TEST_OPTIONS "-no-vis" ${${TEST_OPTIONS_VAR}})
+  # message(STATUS "${TEST_NAME_FULL} --> ${TEST_NAME} ${TEST_OPTIONS}")
 
-  set(THIS_TEST_OPTIONS "-no-vis")
-  list(APPEND THIS_TEST_OPTIONS ${${UP_TEST_NAME}_ARGS})
-  # message(STATUS "Test ${TEST_NAME} options: ${THIS_TEST_OPTIONS}")
-
-  if (NOT (${TEST_NAME} MATCHES ".*p$"))
-    add_test(NAME ${TEST_NAME}_ser
-      COMMAND ${TEST_NAME} ${THIS_TEST_OPTIONS}
-      CONFIGURATIONS PETSC)
-  else()
-    add_test(NAME ${TEST_NAME}_np=4
-      COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-      ${MPIEXEC_PREFLAGS}
-      $<TARGET_FILE:${TEST_NAME}> ${THIS_TEST_OPTIONS}
-      ${MPIEXEC_POSTFLAGS}
-      CONFIGURATIONS PETSC)
-  endif()
+  # All PETSC tests are parallel.
+  add_test(NAME ${TEST_NAME_FULL}_np=4
+    COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
+    ${MPIEXEC_PREFLAGS}
+    $<TARGET_FILE:${TEST_NAME}> ${TEST_OPTIONS}
+    ${MPIEXEC_POSTFLAGS}
+    CONFIGURATIONS PETSC)
 endforeach()
