@@ -78,6 +78,9 @@ API changes
   return a pointer to Coefficient (instead of reference). Note that NULL pointer
   is a valid entry for these two classes - it is treated as the zero function.
 
+- When building with PETSc, the required PETSc version is now 3.8.0. Newer
+  versions may work too, as long as there are no interface changes in PETSc.
+
 
 Version 3.3, released on Jan 28, 2017
 =====================================
